.k8s/items-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: itemsadmin
          image: dissh33/itemmanagementserviceadmin:latest

---

apiVersion: v1
kind: Service
metadata:
  name: items-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: items
  ports:
  - name: items
    protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: items-np-srv
  namespace: default
spec:
  type: NodePort
  selector:
    app: items
  ports:
    - name: items
      protocol: TCP
      port: 80
      targetPort: 80
