.k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: default
spec:
  serviceName: items-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-pvc     
      volumes:
      - name: postgres-pvc
        persistentVolumeClaim:
          claimName: postgres-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - name: postgres-port
    protocol: TCP
    port: 5432
    targetPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-lb-srv
  namespace: default
spec:
  selector:
    app: postgres
  type: LoadBalancer
  ports:
  - name: postgres-port-external
    protocol: TCP
    port: 5433
    targetPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-np-srv
  namespace: default
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - name: postgres-port-node
    protocol: TCP
    port: 5432
    targetPort: 5432
