.k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: klondike-items.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: items-clusterip-srv
                port:
                  number: 80
